base/frontend/sourcegraph-frontend.Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=production,Team=tooling
    kubernetes.io/ingress.class: alb
  name: sourcegraph-frontend
  namespace: sourcegraph
  labels:
    app: sourcegraph-frontend
    deploy: sourcegraph
  name: sourcegraph-frontend
spec:
  rules:
  - host: sourcegraph.segment.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: sourcegraph-frontend
          servicePort: 30080
